// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rating.svelte > renders the correct number of stars 1`] = `
<body>
  <div>
    <rating
      class="flex cursor-pointer select-none"
      role="radiogroup"
      tabindex="0"
    >
       
      <icon
        aria-checked="false"
        aria-label="Rating 1 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 2 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 3 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 4 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 5 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
    </rating>
  </div>
</body>
`;

exports[`Rating.svelte > selects the correct number of stars when value changes 1`] = `
<body>
  <div>
    <rating
      class="flex cursor-pointer select-none"
      role="radiogroup"
      tabindex="0"
    >
       
      <icon
        aria-checked="true"
        aria-label="Rating 1 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-filled"
        />
      </icon>
      <icon
        aria-checked="true"
        aria-label="Rating 2 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-filled"
        />
      </icon>
      <icon
        aria-checked="true"
        aria-label="Rating 3 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-filled"
        />
      </icon>
      <icon
        aria-checked="true"
        aria-label="Rating 4 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-filled"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 5 out of 5"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
    </rating>
  </div>
</body>
`;
